[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/CarAI/CarBounce.gd" type="Script" id=1]
[ext_resource path="res://Assets/3D/Vehicles/Car_Model.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/3D/Vehicles/Bounce.tres" type="Animation" id=3]

[sub_resource type="CapsuleShape" id=9]
radius = 1.57495
height = 2.06988

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.3399, 0.567472, 2.2785 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1.37225, 1, 0.839022 )

[sub_resource type="Animation" id=8]
length = 0.001

[node name="KinematicBody" type="KinematicBody"]
script = ExtResource( 1 )
JumpImpulse = 30.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1, -1.50996e-07, 0, 1.50996e-07, -1, 0, -0.371325, 0.151579 )
shape = SubResource( 9 )

[node name="Car_Model" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.94121, 0, -2.93115e-07, 0, 1.94121, 0, 2.93115e-07, 0, -1.94121, 0, -0.698794, 0.213712 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0242198, 1.3356, 0.57636 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.953174, 0, -0.0105373, -0.370582 )
shape = SubResource( 4 )

[node name="Knock Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.73838 )

[node name="CollisionShape" type="CollisionShape" parent="Knock Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.252952, 0.837348 )
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bounce = ExtResource( 3 )
anims/RESET = SubResource( 8 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="Knock Area" to="." method="_on_Knock_Area_body_entered"]
